# pico-server-auth

./: .coveragerc  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile.test  MANIFEST.in  Makefile  README.md  SECURITY.md  mkdocs.yml  pyproject.toml  tox.ini
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  docs.yml  publish-to-pypi.yml
docs/: CHANGELOG.md  architecture.md  faq.md  getting-started.md  index.md  skills.md  troubleshooting.md
docs/how-to/: custom-challenge-store.md  embed-in-app.md  index.md  standalone.md  testing.md
docs/javascripts/: extra.js
docs/reference/: config.md  endpoints.md  index.md
docs/stylesheets/: extra.css
docs/user-guide/: index.md  jwks.md  password-auth.md  wallet-auth.md
examples/: embedded_app.py  standalone_auth.py  wallet_login.py
releases/: v0.1.0.md
src/pico_server_auth/: __init__.py  challenge_store.py  config.py  controllers.py  token_issuer.py  wallet_verifier.py
test/: Dockerfile.dev
tests/: conftest.py  test_challenge_store.py  test_controllers.py  test_token_issuer.py  test_wallet_verifier.py
